--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,7 +19,7 @@
   text-align: center;
   position: fixed;
   width: 100%;
-  background-color: gold;
+  background-color: $main-color;
   border: 10px solid gray;
   border-bottom: 0;
   color: gray;
