Vertical alignment of cards

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,7 +4,7 @@
   font-family: Arial;
 }
 
-// @todo Refactor this. Get rid of it. Burn it.
+// @todo Refactor this. Get rid of it. Burn it. Variables. Abolish the px. Just no.
 
 .app {
   overflow: auto;
