--- a/src/app/note/note.component.scss
+++ b/src/app/note/note.component.scss
@@ -1,3 +1,4 @@
+// Styles for notes.
 // @todo - Most of these styles should be done with a library.
 
 @import "../variables";
@@ -7,20 +8,16 @@ $card-gutter: $global-margin;
 $card-background-color: #ebe3a8;
 $card-font-family: Cursive, Arial;
 
-// @todo Everything.
-
 :host {
   // Card wrapper styles here.
 }
 
-// @todo use a library or something for this. Angular Material currently in use, but Foundation or Compass might be good for overall.
 .card {
-
   background-color: $card-background-color;
   width: $card-width;
-  display: inline-block; // @todo default flex display causes conflicts.
+  display: inline-block;
   vertical-align: top;
-  margin: $card-gutter; // @todo Grid or other CSS library variable...
+  margin: $card-gutter;
 
   &__header {
     justify-content: space-between;
@@ -36,11 +33,6 @@ $card-font-family: Cursive, Arial;
     justify-content: flex-end;
     font-size: 80%;
   }
-
 }
 
-.invalid {
-  // TODO This should be in a common component.
-  color: $error-color;
-}
 
